--- a/app/views/pokemon/index.html.erb
+++ b/app/views/pokemon/index.html.erb
@@ -24,18 +24,38 @@
         </button>
 
         <h3 class="modal-title">
-          <span class="js-pkmn-name">Feraligtr</span>
-          <small class="js-pkmn-number">#160</small>
+          <span class="js-pkmn-name"></span>
+          <small class="js-pkmn-number"></small>
         </h3>
       </div><!-- .modal-header -->
 
       <div class="modal-body">
         <dl class="dl-horizontal">
           <dt>Height</dt>
-          <dd class="js-pkmn-height">23</dd>
+          <dd class="js-pkmn-height"></dd>
 
           <dt>Weight</dt>
-          <dd class="js-pkmn-weight">888</dd>
+          <dd class="js-pkmn-weight"></dd>
+
+          <dt>HP</dt>
+          <dd class="js-pkmn-hp"></dd>
+
+          <dt>Attack</dt>
+          <dd class="js-pkmn-attack"></dd>
+
+          <dt>Defense</dt>
+          <dd class="js-pkmn-defense"></dd>
+
+          <dt>Sp.Attack</dt>
+          <dd class="js-pkmn-sp_atk"></dd>
+
+          <dt>Sp.Defense</dt>
+          <dd class="js-pkmn-sp_def"></dd>
+
+          <dt>Speed</dt>
+          <dd class="js-pkmn-speed"></dd>
+
+
         </dl>
       </div><!-- .modal-body -->
 
